--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,11 +1,32 @@
 @import url(fontawesome-all.min.css);
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i");
 
-/*
-	Story by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
+#navbar a {
+	font-weight: 100;
+	float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 15px;
+  text-decoration: none;
+	font-size: 20px;
+}
+@media screen and (max-width: 480px ) {
+	#navbar a{
+		font-size: 15px
+	}
+}
+
+#navbar {
+	z-index: 99;
+	background-color: #2a2a2a;
+	position: fixed;
+	top: 0;
+	width: 100%;
+	display: block;
+	transition: top 0.3s;
+}
+
 
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
